[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde_with = "3.8.1"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
derive_builder = "0.20.0"
derive_more = "0.99.17"
strum = { version = "0.26.2", features = ["derive"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
http = "1.1.0"
bytes = "1.6.0"
blake3 = "1.5.1"
